packages/kit/test/apps/basics/src/routes/errors/endpoint-throws/page-endpoint-get-throws.js
export const get = () => {
	throw new Error('Some userland error.');
};
